# yaesutool

./: CHANGELOG.md  CMakeLists.txt  Make-mingw  Makefile  README.md  TODO-ft-60r.txt  ft-60.c  main.c  radio.c  radio.h  serialport.h  util.c  util.h  vx-2.c
.github/workflows/: c-cpp.yml  release-tag.yml
